fix(pagination): align icons, non-bold text, copy, left-align text

--- a/src/components/pagination/_pagination.scss
+++ b/src/components/pagination/_pagination.scss
@@ -257,6 +257,8 @@ $css--helpers: true;
     margin: 0;
     padding: 0 14px;
     border-left: 1px solid $ui-03;
+    display: flex;
+    justify-content: center;
 
     &:hover {
       .#{$prefix}--pagination__button-icon {
@@ -302,7 +304,6 @@ $css--helpers: true;
       width: auto;
       padding: 0 rem(44px) 0 $spacing-md;
       margin: 0;
-      text-align-last: center;
       box-shadow: none;
       border: none;
 
@@ -321,9 +322,6 @@ $css--helpers: true;
       border-right: 1px solid $ui-03;
       margin-right: $spacing-md;
     }
-    .#{$prefix}--select__item-count .#{$prefix}--select-input {
-      font-weight: 600;
-    }
 
     .#{$prefix}--select__page-number {
       border-left: 1px solid $ui-03;
@@ -336,8 +334,6 @@ $css--helpers: true;
       width: rem(24px);
       padding: 0;
       margin: 0;
-      font-weight: 600;
-      text-align: center;
       box-shadow: none;
       order: 0;
 
